--- a/asivamosffie.web/asivamosffie/src/app/_pages/gestionar-procesos-de-seleccion/components/registrar-seguimiento-cronograma/registrar-seguimiento-cronograma.component.html
+++ b/asivamosffie.web/asivamosffie/src/app/_pages/gestionar-procesos-de-seleccion/components/registrar-seguimiento-cronograma/registrar-seguimiento-cronograma.component.html
@@ -92,7 +92,7 @@
                       type="text"
                       formControlName="etapaActualProceso"
                       readonly
-                      style="border: 0; color: #174193; text-align: center; width: 100%"
+                      style="border: 0; color: #174193; text-align: center; width: 100%; min-width: 6.5em"
                     />
                   </p>
                 </td>
