--- a/asivamosffie.web/asivamosffie/src/app/_pages/requisitos-tecnicos-construccion/components/manejo-anticipo/manejo-anticipo.component.html
+++ b/asivamosffie.web/asivamosffie/src/app/_pages/requisitos-tecnicos-construccion/components/manejo-anticipo/manejo-anticipo.component.html
@@ -135,7 +135,7 @@
     <section class="text-center container w-100 mt-2em" *ngIf="formAnticipo.get('requiereAnticipo').value">
       <div class="d-flex mt-1em">
         <label
-          class="ml-5em"
+          class="ml-5em mt-05em mr-05em"
           [class.color-secondaryColor]="
             (formAnticipo.get('urlSoporte').invalid && formAnticipo.get('urlSoporte').touched) ||
             (formAnticipo.get('urlSoporte').invalid && estaEditando)
