--- a/asivamosffie.web/asivamosffie/src/app/_pages/requisitos-tecnicos-construccion/components/planes-programas/planes-programas.component.html
+++ b/asivamosffie.web/asivamosffie/src/app/_pages/requisitos-tecnicos-construccion/components/planes-programas/planes-programas.component.html
@@ -58,7 +58,10 @@
               [matTooltipPosition]="'above'"
               matTooltip="Debe ingresar la información en el campo para continuar"
               matTooltipClass="info-tooltip"
-              *ngIf="!element.recibioRequisito && estaEditando"
+              *ngIf="
+                (element.recibioRequisito === null && estaEditando) ||
+                (element.recibioRequisito === undefined && estaEditando)
+              "
             />
           </span>
         </section>
