--- a/asivamosffie.web/asivamosffie/src/app/_pages/gestionar-acta-inicio-fdos-constr/components/ver-detalle-tecnico-fdos-constr/ver-detalle-tecnico-fdos-constr.component.html
+++ b/asivamosffie.web/asivamosffie/src/app/_pages/gestionar-acta-inicio-fdos-constr/components/ver-detalle-tecnico-fdos-constr/ver-detalle-tecnico-fdos-constr.component.html
@@ -83,7 +83,7 @@
 <section class="container text-center mb-2em" *ngIf="mostrarCarga">
     <button mat-raised-button 
                                 color="accent" 
-                                (click)="descargarActaDesdeTabla()">
+                                (click)="descargarActaSuscrita(this.rutaActaSuscrita)">
     Descargar acta suscrita
     </button>
 
