--- a/asivamosffie.web/asivamosffie/src/app/_pages/solicitar-disponibilidad-presupuestal/components/nueva-solicitud-especial/nueva-solicitud-especial.component.html
+++ b/asivamosffie.web/asivamosffie/src/app/_pages/solicitar-disponibilidad-presupuestal/components/nueva-solicitud-especial/nueva-solicitud-especial.component.html
@@ -13,6 +13,8 @@
     <h1 class="title-menu--h1">Nueva solicitud DDP especial</h1>
   </div>
 
+  <app-tabla-observaciones></app-tabla-observaciones>
+
   <form [formGroup]="addressForm" (ngSubmit)="onSubmit()">
     <mat-card class="shipping-card">
       <mat-card-header class="header-card header-card--margin">
