--- a/asivamosffie.web/asivamosffie/src/app/_pages/registrar-actualiz-polizas-garantias/components/registrar-actualiz-polizas-garantias/registrar-actualiz-polizas-garantias.component.html
+++ b/asivamosffie.web/asivamosffie/src/app/_pages/registrar-actualiz-polizas-garantias/components/registrar-actualiz-polizas-garantias/registrar-actualiz-polizas-garantias.component.html
@@ -14,55 +14,76 @@
             <button mat-icon-button (click)="verAyuda = false" class="text-info--close">
                 <img src="assets/img/icon/cerrar-gris.svg" alt="cerrar ayuda">
             </button>
-            Bienvenida/o, aquí podrá registrar actualizaciones de pólizas y garantías para los contratos de obra e interventoría que se encuentran firmados,
+            Bienvenida/o, aquí podrá registrar actualizaciones de pólizas y garantías para los contratos de obra e
+            interventoría que se encuentran firmados,
             registrados y son ejecutados en el marco de la gestión del FFIE.
         </div>
     </div>
-    <!--
-    <div class="table-responsive">
-        <table mat-table [dataSource]="dataSource" matSort class="mat-elevation-z8">
-            <ng-container matColumnDef="fechaTerminacionProyecto">
-                <th mat-header-cell *matHeaderCellDef mat-sort-header> Fecha de terminación del proyecto </th>
-                <td mat-cell *matCellDef="let element" align="center"> <b>{{ element.fechaTerminacionProyecto | date:
-                        'dd/MM/yyyy' }}</b> </td>
-            </ng-container>
-            <ng-container matColumnDef="llaveMEN">
-                <th mat-header-cell *matHeaderCellDef mat-sort-header> Llave MEN </th>
-                <td mat-cell *matCellDef="let element" align="center"> <em>{{ element.llaveMEN }}</em> </td>
-            </ng-container>
-            <ng-container matColumnDef="tipoIntervencion">
-                <th mat-header-cell *matHeaderCellDef mat-sort-header> Tipo de intervención </th>
-                <td mat-cell *matCellDef="let element" align="center"> <em>{{ element.tipoIntervencion }}</em> </td>
-            </ng-container>
-            <ng-container matColumnDef="institucionEducativa">
-                <th mat-header-cell *matHeaderCellDef mat-sort-header> Institución Educativa </th>
-                <td mat-cell *matCellDef="let element" align="center"> {{ element.institucionEducativa }} </td>
-            </ng-container>
-            <ng-container matColumnDef="sede">
-                <th mat-header-cell *matHeaderCellDef mat-sort-header> Sede </th>
-                <td mat-cell *matCellDef="let element" align="center"> {{ element.sede }} </td>
-            </ng-container>
-            <ng-container matColumnDef="numeroTraslados">
-                <th mat-header-cell *matHeaderCellDef mat-sort-header> Número de traslados </th>
-                <td mat-cell *matCellDef="let element" align="center"> {{ element.numeroTraslados }} </td>
-            </ng-container>
-            <ng-container matColumnDef="estadoBalance">
-                <th mat-header-cell *matHeaderCellDef mat-sort-header> Estado del balance </th>
-                <td mat-cell *matCellDef="let element" align="center"> {{ element.estadoBalance }} </td>
-            </ng-container>
-            <ng-container matColumnDef="gestion">
-                <th mat-header-cell *matHeaderCellDef mat-sort-header> Gestión </th>
-                <td mat-cell *matCellDef="let element" align="center">
-                    <button mat-raised-button color="accent" class="btn-table" *ngIf="element.numeroTraslados=='---'"
-                        (click)="validarBalance(element.gestion)">
-                        Validar balance
-                    </button>
-                </td>
-            </ng-container>
-            <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
-            <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
-        </table>
-        <mat-paginator [pageSizeOptions]="[5, 10, 25, 100]"></mat-paginator>
+    <form [formGroup]="addressForm">
+        <div class="row" style="margin-top: 2em; justify-content: center">
+            <div class="col-md-6">
+                <div class="row">
+                    <div class="pr-1">
+                        <label class="label-left" for="numeroContrato" [class.color-secondaryColor]="
+                      (addressForm.get('numeroContrato').invalid && addressForm.get('numeroContrato').touched) ||
+                      (addressForm.get('numeroContrato').invalid && estaEditando)
+                    ">
+                            Número de contrato
+                        </label>
+                    </div>
+                    <div class="col d-flex">
+                        <mat-form-field class="full-width">
+                            <input matInput #nombre2 type="text" maxlength="10" [formControl]="myFilter" required
+                                [matAutocomplete]="auto2" />
+                            <mat-autocomplete #auto2="matAutocomplete">
+                                <mat-option (click)="seleccionAutocomplete(nombres)"
+                                    *ngFor="let nombres of filteredContrato | async" [value]="nombres">
+                                    {{ nombres }}
+                                </mat-option>
+                            </mat-autocomplete>
+                        </mat-form-field>
+                        <button mat-button color="primary" class="busqueda--img">
+                            <img src="assets/img/icon/lupa.svg" alt="Buscar" />
+                        </button>
+                    </div>
+                    <span class="icon-incompleto">
+                        <img class="icon-incompleto--img" src="assets/img/icon/incompleto.svg"
+                            alt="este campo es requerido" [matTooltipPosition]="'above'"
+                            matTooltip="Debe ingresar la información en el campo para continuar"
+                            matTooltipClass="info-tooltip" *ngIf="
+                      (addressForm.get('numeroContrato').invalid && addressForm.get('numeroContrato').touched) ||
+                      (addressForm.get('numeroContrato').invalid && estaEditando)
+                    " />
+                    </span>
+                </div>
+            </div>
+        </div>
+    </form>
+    <div *ngIf="this.selectedContract != ''">
+        <div class="table-responsive">
+            <table mat-table [dataSource]="dataSource" matSort class="mat-elevation-z8">
+                <ng-container matColumnDef="numContrato">
+                    <th mat-header-cell *matHeaderCellDef mat-sort-header> Llave MEN </th>
+                    <td mat-cell *matCellDef="let element" align="center"> <b>{{ element.numContrato }}</b> </td>
+                </ng-container>
+                <ng-container matColumnDef="tipoContrato">
+                    <th mat-header-cell *matHeaderCellDef mat-sort-header> Llave MEN </th>
+                    <td mat-cell *matCellDef="let element" align="center"> <b>{{ element.tipoContrato }}</b> </td>
+                </ng-container>
+                <ng-container matColumnDef="contratista">
+                    <th mat-header-cell *matHeaderCellDef mat-sort-header> Llave MEN </th>
+                    <td mat-cell *matCellDef="let element" align="center"> <b>{{ element.contratista }}</b> </td>
+                </ng-container>
+                <ng-container matColumnDef="gestion">
+                    <th mat-header-cell *matHeaderCellDef mat-sort-header> Gestión </th>
+                    <td mat-cell *matCellDef="let element" align="center">
+                        */*/*/
+                    </td>
+                </ng-container>
+                <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
+                <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
+            </table>
+            <mat-paginator [pageSizeOptions]="[5, 10, 25, 100]"></mat-paginator>
+        </div>
     </div>
-    -->
 </section>
