--- a/asivamosffie.web/asivamosffie/src/app/_pages/contratos-modificaciones-contractuales/components/form-registro-tramite/form-registro-tramite.component.html
+++ b/asivamosffie.web/asivamosffie/src/app/_pages/contratos-modificaciones-contractuales/components/form-registro-tramite/form-registro-tramite.component.html
@@ -334,7 +334,13 @@
     <div class="col-md-12">
       <div class="row">
         <div class="pr-1">
-          <label class="label-left">Observaciones</label>
+          <label class="label-left" 
+          [class.color-secondaryColor]="
+            (dataFormulario.get('observaciones').invalid && dataFormulario.get('observaciones').touched) ||
+            (dataFormulario.get('observaciones').invalid && estaEditando)
+          ">
+          Observaciones
+        </label>
         </div>
         <div class="col d-flex">
           <quill-editor
@@ -365,6 +371,20 @@
           >
             2000
           </span>
+          <span class="icon-incompleto" style="margin-top: 1.9em">
+            <img
+              class="icon-incompleto--img"
+              src="assets/img/icon/incompleto.svg"
+                            alt="este campo es requerido"
+              [matTooltipPosition]="'above'"
+              matTooltip="Debe ingresar la información en el campo para continuar"
+              matTooltipClass="info-tooltip"
+              *ngIf="
+                (dataFormulario.get('observaciones').invalid && dataFormulario.get('observaciones').touched) ||
+                (dataFormulario.get('observaciones').invalid && estaEditando)
+              "
+            />
+          </span>
         </div>
       </div>
     </div>
@@ -374,7 +394,13 @@
     <div class="col-md-12">
       <div class="row">
         <div class="pr-1">
-          <label class="label-left" style="margin-top: 1.4em"> Adjuntar documento suscrito </label>
+          <label class="label-left" style="margin-top: 1.4em"
+          [class.color-secondaryColor]="
+            (dataFormulario.get('documentoFile').invalid && dataFormulario.get('documentoFile').touched) ||
+            (dataFormulario.get('documentoFile').invalid && estaEditando)
+          ">
+           Adjuntar documento suscrito 
+          </label>
         </div>
         <div class="col d-flex">
           <span class="input-file-text text-center required" (click)="fileInput.click()" style="width: 100%">
@@ -396,6 +422,20 @@
             accept="application/pdf"
           />
         </div>
+        <span class="icon-incompleto">
+          <img
+            class="icon-incompleto--img"
+            src="assets/img/icon/incompleto.svg"
+                          alt="este campo es requerido"
+            [matTooltipPosition]="'above'"
+            matTooltip="Debe ingresar la información en el campo para continuar"
+            matTooltipClass="info-tooltip"
+            *ngIf="
+              (dataFormulario.get('documentoFile').invalid && dataFormulario.get('documentoFile').touched) ||
+              (dataFormulario.get('documentoFile').invalid && estaEditando)
+            "
+          />
+        </span>
       </div>
     </div>
   </div>
