--- a/asivamosffie.web/asivamosffie/src/app/_pages/generar-acta-inicio-f-uno-prc/components/tabla-actas-de-inicio-de-obra/tabla-actas-de-inicio-de-obra.component.html
+++ b/asivamosffie.web/asivamosffie/src/app/_pages/generar-acta-inicio-f-uno-prc/components/tabla-actas-de-inicio-de-obra/tabla-actas-de-inicio-de-obra.component.html
@@ -40,7 +40,7 @@
                         (click)="this.verDetalleEditar(element.contratoId)">Ver detalle/Editar</button>
                     <button mat-raised-button color="accent" class="btn-table"
                         *ngIf="element.estadoActa=='Con notificación al interventor'"
-                        (click)="this.enviarInterventor(element.contratoId)">Enviar para revisión y aprobación</button>
+                        (click)="this.enviarInterventor(element.contratoId)">Enviar al interventor</button>
                     <button mat-raised-button color="accent" class="btn-table"
                         *ngIf="element.estadoActa=='Con notificación al interventor' || element.estadoActa=='Con acta generada' || element.estadoActa=='Con acta en proceso de firma' || element.estadoActa=='Con acta suscrita y cargada'"
                         (click)="this.verDetalle(element.contratoId)">Ver detalle</button>
