--- a/asivamosffie.web/asivamosffie/src/app/_pages/aprobar-solicitudes-pago/components/aprobar-solicitudes-pago/aprobar-solicitudes-pago.component.html
+++ b/asivamosffie.web/asivamosffie/src/app/_pages/aprobar-solicitudes-pago/components/aprobar-solicitudes-pago/aprobar-solicitudes-pago.component.html
@@ -6,7 +6,7 @@
     </div>
     <div class="text-center">
         <h1 class="title-menu--h1">
-            Aprobar solicitudes de pago
+            Verificar solicitudes de pago
         </h1>
         <button mat-mini-fab color="primary" class="btn-info" (click)="verAyuda = !verAyuda">?</button>
 
@@ -14,7 +14,7 @@
             <button mat-icon-button (click)="verAyuda = false" class="text-info--close">
                 <img src="assets/img/icon/cerrar-gris.svg" alt="cerrar ayuda">
             </button>
-            Bienvenida/o, aquí podrá realizar la revisión y aprobación de las solicitudes de pago para los contratos suscritos asignados a usted, que cuentan
+            Bienvenida/o, aquí podrá realizar la revisión de las solicitudes de pago para los contratos suscritos asignados a usted, que cuentan
             con acta de inicio aprobada, y para los conceptos especiales de Expensas u Otros costos/servicios, que han sido verificados previamente por el
             equipo de facturación y que son ejecutados en el marco de la gestión del FFIE.
         </div>
@@ -23,7 +23,7 @@
         <table mat-table [dataSource]="dataSource" matSort class="mat-elevation-z8">
             <ng-container matColumnDef="fechaSolicitud">
                 <th mat-header-cell *matHeaderCellDef mat-sort-header> Fecha de solicitud </th>
-                <td mat-cell *matCellDef="let element" align="center"> <b>{{ element.fechaSolicitud }}</b> </td>
+                <td mat-cell *matCellDef="let element" align="center"> <b>{{ element.fechaCreacion | date: 'dd/MM/yyyy' }}</b> </td>
             </ng-container>
             <ng-container matColumnDef="numeroSolicitud">
                 <th mat-header-cell *matHeaderCellDef mat-sort-header> Número de solicitud </th>
@@ -31,7 +31,7 @@
             </ng-container>
             <ng-container matColumnDef="modalidadContrato">
                 <th mat-header-cell *matHeaderCellDef mat-sort-header> Modalidad del contrato </th>
-                <td mat-cell *matCellDef="let element" align="center"> {{ element.modalidadContrato }} </td>
+                <td mat-cell *matCellDef="let element" align="center"> {{ element.modalidadNombre }} </td>
             </ng-container>
             <ng-container matColumnDef="numeroContrato">
                 <th mat-header-cell *matHeaderCellDef mat-sort-header> Número del contrato </th>
@@ -39,25 +39,21 @@
             </ng-container>
             <ng-container matColumnDef="estadoAprobacion">
                 <th mat-header-cell *matHeaderCellDef mat-sort-header> Estado de la aprobación </th>
-                <td mat-cell *matCellDef="let element" align="center"> {{ element.estadoAprobacion }} </td>
+                <td mat-cell *matCellDef="let element" align="center"> {{ element.estadoNombre }} </td>
             </ng-container>
             <ng-container matColumnDef="gestion">
                 <th mat-header-cell *matHeaderCellDef mat-sort-header> Gestión </th>
                 <td mat-cell *matCellDef="let element" align="center"> 
-                    <button mat-raised-button color="accent" class="btn-table" (click)="this.aprobarSolicitud(element.gestion)"
-                    *ngIf="element.estadoAprobacion=='Sin aprobación'">
+                    <button mat-raised-button color="accent" class="btn-table" (click)="this.aprobarSolicitud(element.gestion)">
                         Aprobar solicitud
                     </button>
-                    <button mat-raised-button color="accent" class="btn-table" (click)="this.openCertificate()"
-                    *ngIf="element.estadoAprobacion=='Con solicitud aprobada por el supervisor'">
+                    <button mat-raised-button color="accent" class="btn-table" (click)="this.openCertificate()">
                         Enviar para autorizar solicitud
                     </button>
-                    <button mat-raised-button color="accent" class="btn-table" (click)="this.verDetalleEditar(element.gestion)"
-                    *ngIf="element.estadoAprobacion=='En proceso de aprobación'">
+                    <button mat-raised-button color="accent" class="btn-table" (click)="this.verDetalleEditar(element.gestion)">
                         Ver detalle/Editar
                     </button>
-                    <button mat-raised-button color="accent" class="btn-table" (click)="this.verDetalle(element.gestion)"
-                    *ngIf="element.estadoAprobacion=='Con solicitud devuelta por el supervisor' || element.estadoAprobacion=='Con solicitud aprobada por el supervisor'">
+                    <button mat-raised-button color="accent" class="btn-table" (click)="this.verDetalle(element.gestion)">
                         Ver detalle
                     </button>
                 </td>
